# FoundryIQ-and-Agent-Framework-demo

./: .azdignore  .gitignore  AGENTS.md  README.md  azure.yaml  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
agents/hr_agent/: config.yaml
agents/orchestrator/: config.yaml
app/backend/: Dockerfile  main.py  requirements.txt
app/backend/agents/: __init__.py  hr_agent.py  marketing_agent.py  orchestrator.py  products_agent.py
app/backend/static/: index.html
app/backend/static/assets/: index-T93Ou21a.css  index-bvo8o98V.js
app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/frontend/src/: .App.tsx  App.tsx  index.css
docs/: AGENTS.md  MANUAL_STEPS.md  deployment.md
infra/: abbreviations.json  bicepconfig.json  main.bicep  main.parameters.json
infra/core/ai/: cognitiveservices.bicep
infra/core/host/: container-apps-environment.bicep
scripts/: _common.sh  auth_init.ps1  auth_init.sh  auth_update.ps1  auth_update.sh  deploy.sh  setup_agents.ps1  setup_agents.sh  setup_fabric.sh  setup_indexes.sh  setup_knowledge_bases.sh  setup_knowledge_sources.sh  setup_openai_deployments.sh  setup_rbac.sh  upload_sample_data.sh
